# lomb_periodogram

./: .gitignore  Makefile  README.md  __init__.py  main.py  makefile  meson.build  plots.py  synth.py
doc/: doc.ipynb
doc/docs/: index.html  lomb.html  lomb_periodogram.html  search.js
doc/docs/lomb/: flomb.html  main.html  plots.html  synth.html
doc/docs/lomb_periodogram/: flomb.html  main.html  plots.html  src.html  synth.html
doc/docs/lomb_periodogram/src/: flomb.html  main.html  plots.html  synth.html
docs/: index.html  lomb.html  search.js
docs/lomb/: plots.html  synth.html
matlab/: easylomb.m  lomb_demo.m
src/: __init__.py  helper.mod  lomb.py  lomb_class.py  lomb_fortran.f90  main.f90  makefile  plots.py  synth.py  utils.py
